name:                Palace
version:             0.1.0.1
synopsis:            Integrated tools for personal information management.
description:         
homepage:            http://github.com/bbshortcut/Palace
license:             GPL-3
license-file:        LICENSE
author:              B.B. Shortcut
maintainer:          bbshortcut@alysse.org
copyright:           Copyright (C) 2014 B.B. Shortcut
category:            Personal Information Management
build-type:          Simple
cabal-version:       >=1.8

executable cards
  main-is:             cards.hs
  other-modules:       Cards, TimeSpecs, Utils
  build-depends:       base ==4.6.*, time ==1.4.*, containers ==0.5.*, readline ==1.0.*, directory ==1.2.*, filepath ==1.3.*, HDBC ==2.4.*, HDBC-sqlite3 ==2.3.*
  hs-source-dirs:      src

executable volumes
  main-is:             volumes.hs
  other-modules:       Volumes, TimeSpecs, Utils
  build-depends:       base ==4.6.*, time ==1.4.*, containers ==0.5.*, readline ==1.0.*, directory ==1.2.*, filepath ==1.3.*, HDBC ==2.4.*, HDBC-sqlite3 ==2.3.*, network ==2.4.*, process ==1.2.*
  hs-source-dirs:      src

test-suite tests
  hs-source-dirs:       test, src
  main-is:              tests.hs
  type:                 exitcode-stdio-1.0
  build-depends:        base ==4.6.*, time ==1.4.*, containers ==0.5.*, readline ==1.0.*, directory ==1.2.*, filepath ==1.3.*, QuickCheck ==2.7.*, test-framework ==0.8.*, test-framework-quickcheck2 ==0.3.*
